added keyboard and mouse controls

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ Lost and Found/Temp
 Lost and Found/obj
 Lost and Found/obj
 Lost and Found/ProjectSettings
+Lost and Found/obj
+Lost and Found/ProjectSettings
